@@ -17,15 +17,8 @@ You should have received a copy of the GNU Lesser General Public
 License along with this library; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA*/
 
-#include <QDialogButtonBox>
-#include <QFormLayout>
-#include <QCompleter>
-#include <QStringListModel>
-#include <QDirIterator>
-#include <QDebug>
-
-#include "cprime.h"
 #include "applicationdialog.h"
+
 
 ApplicationDialog::ApplicationDialog(QWidget *parent) : QDialog(parent)
 {
