@@ -23,9 +23,12 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA*/
 #include <QObject>
 #include <QWidget>
 #include <QDialog>
+#include <QTimer>
 
+#include "cprime.h"
 #include "bookmarkmanage.h"
 #include "libcprime_global.h"
+
 
 namespace Ui {
 class bookmarkDialog;
