@@ -22,8 +22,10 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA*/
 
 #include <QObject>
 #include <QStringList>
+#include <QFile>
 
 #include "libcprime_global.h"
+#include "properties.h"
 
 /**
  * @class DesktopFile
