@@ -17,10 +17,8 @@ You should have received a copy of the GNU Lesser General Public
 License along with this library; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA*/
 
-#include <QDirIterator>
-
 #include "mimeutils.h"
-#include "cprime.h"
+
 
 /**
  * @brief Creates mime utils
