@@ -18,10 +18,8 @@ License along with this library; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
 */
 
-#include <QDateTime>
-#include <QCollator>
-
 #include "sortfunc.h"
+
 
 QStringList CPrime::SortFunc::sortDate(const QStringList &dateList, CPrime::SortOrder s, const QString &format)
 {
