@@ -22,8 +22,11 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
 #define SORTFUNC_H
 
 #include <QStringList>
+#include <QDateTime>
+#include <QCollator>
 
 #include "cprime.h"
+
 
 namespace CPrime {
 
