@@ -18,18 +18,8 @@ License along with this library; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
 */
 
-#include <QGraphicsDropShadowEffect>
-#include <QMimeDatabase>
-#include <QMimeType>
-#include <QPalette>
-#include <QApplication>
-#include <QMessageBox>
-
 #include "themefunc.h"
-#include "cprime.h"
-#include "settingsmanage.h"
-#include "desktopfile.h"
-#include "applicationdialog.h"
+
 
 /*
  * Add shadow effect on a widget.
