@@ -18,6 +18,26 @@ License along with this library; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
 */
 
+/*
+A Library for CoreApps .
+
+This file is part of libcprime.
+
+This library is free software; you can redistribute it and/or
+modify it under the terms of the GNU Lesser General Public
+License as published by the Free Software Foundation; either
+version 2.1 of the License, or (at your option) any later version.
+
+This library is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+Lesser General Public License for more details.
+
+You should have received a copy of the GNU Lesser General Public
+License along with this library; if not, write to the Free Software
+Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
+*/
+
 #ifndef THEMEFUNC_H
 #define THEMEFUNC_H
 
@@ -25,8 +45,18 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
 #include <QString>
 #include <QSettings>
 #include <QIODevice>
+#include <QGraphicsDropShadowEffect>
+#include <QMimeDatabase>
+#include <QMimeType>
+#include <QPalette>
+#include <QApplication>
+#include <QMessageBox>
 
 #include "cprime.h"
+#include "settingsmanage.h"
+#include "desktopfile.h"
+#include "applicationdialog.h"
+
 
 namespace CPrime {
 
