@@ -33,6 +33,7 @@ Version 2.3
 - if folder/file is bookmarked, now will only show the file/folder name in messagebox
 - fixed coreinfo not opening any file after installing.
 - added a function to make first letter capital of any word in libcprime.
+- trashing picture from coreimage crashing the app.
 <<<<<<< HEAD
 =======
 
